make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
 
     <div class="card-white">
       <h1>Hello, I'm Yujia</h1>
-      <h3>Title: Programmer</h3>
       <img class="img-round" src="images/avatar.JPG" width="120px" height="120px" alt="Yujia">
-      <p>I love coding, hiking and plants. I'm now working hard in Le Wagon to become an amazing front-end developer.
+      <p>I love coding, hiking and plants. I'm now working hard in Le Wagon to become an amazing programmer.
       </p>
-      <a class="btn-blue" href="https://www.lewagon.com/" target="_blank">Discover Le Wagon</a>
+      <a class="btn-blue" href="#" target="_blank">Contact me <i class="fab fa-solid fa-envelope"></i></a>
+    </div>
+
+    <div class="card-white">
+      <div>
+        <h2>My Skills</h2>
+        <div>
+          <img height="80px" width="80px" src="images/coding.png" alt="">
+          <h3>Web Development</h3>
+          <p>Build a custom website from scratch to accommodate your needs</p>
+        </div>
+        <div>
+          <img height="80px" width="80px" src="images/customize.png" alt="">
+          <h3>Web Design</h3>
+          <p>Create a user interface that works well and looks amazing</p>
+        </div>
+      </div>
     </div>
 
     <div class="card-white">
